--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,58 @@
-<p>header works!</p>
+<!--Navbar-->
+<mdb-navbar SideClass="navbar navbar-expand-lg shadow navbar-dark purple lighten-1" [containerInside]="false">
+    <div class="container">
+        <!-- Navbar brand -->
+        <mdb-navbar-brand><a class="navbar-brand" href="#">maSuperAgenceImmo</a></mdb-navbar-brand>
+
+        <!-- Collapsible content -->
+
+        <links>
+
+            <!-- Links -->
+
+            <ul class="navbar-nav ml-auto">
+                <!-- Dropdown-------------->
+
+                <li class="nav-item dropdown" dropdown>
+                    <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light"
+                        mdbWavesEffect>
+                        Administration<span class="caret"></span></a>
+                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
+                        <a class="dropdown-item waves-light" mdbWavesEffect href="#">Tableau de bord</a>
+                        <a class="dropdown-item waves-light" mdbWavesEffect href="#">Déconnexion</a>
+                        <!-- <a class="dropdown-item waves-light" mdbWavesEffect href="#">Something else here</a>
+        <div class="divider dropdown-divider"></div>
+        <a class="dropdown-item waves-light" mdbWavesEffect href="#">Separated link</a> -->
+                    </div>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link waves-light" mdbWavesEffect href='#'>Accueil<span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active" routerLinkActive="active">
+                    <a class="nav-link waves-light" mdbWavesEffect routerLink="/admin/login">Connexion<span
+                            class="sr-only">(current)</span></a>
+                </li>
+
+
+                <!-- <li class="nav-item">
+          <a class="nav-link waves-light" mdbWavesEffect>Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-light" mdbWavesEffect>Pricing</a>
+        </li> -->
+
+            </ul>
+            <!-- Links -->
+
+            <!-- Search form -->
+            <!-- <form class="form-inline waves-light" mdbWavesEffect>
+                <div class="md-form my-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                </div>
+            </form> -->
+        </links>
+        <!-- Collapsible content -->
+    </div>
+</mdb-navbar>
+<!--/.Navbar-->
